Texture loading and rendering.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,12 @@
 cmake_minimum_required(VERSION 3.18)
 project(hd)
-find_package(SDL2)
-add_executable(hd hd.cpp)
-
-target_link_libraries(hd SDL2)
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/sdl2)
+find_package(SDL2 REQUIRED)
+find_package(SDL2_image REQUIRED)
+find_package(SDL2_gfx REQUIRED)
+find_package(SDL2_ttf REQUIRED)
+find_package(SDL2_mixer REQUIRED)
+find_package(SDL2_net REQUIRED)
+add_executable(hd hd.cpp hdCommon.cpp hdScene.cpp hdShared.cpp hdSplashScene.cpp hdApp.cpp)
+configure_file(splash.bmp splash.bmp COPYONLY)
+target_link_libraries(hd SDL2::Main SDL2::Image SDL2::TTF SDL2::Net SDL2::Mixer SDL2::GFX)
