--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -1,4 +1,6 @@
 if(DOXYGEN_FOUND)
+  set(DOXYGEN_JAVADOC_AUTOBRIEF YES)
+  set(DOXYGEN_JAVADOC_BANNER NO)
   set(DOXYGEN_GENERATE_HTML YES)
   set(DOXYGEN_GENERATE_MAN YES)
   set(DOXYGEN_BUILTIN_STL_SUPPORT YES)
@@ -51,6 +53,6 @@ if(DOXYGEN_FOUND)
   set(DOXYGEN_CALL_GRAPH YES)
   set(DOXYGEN_CALLER_GRAPH YES)
   set(DOXYGEN_GRAPHICAL_HIERARCHY NO)
-  set(DOXYGEN_EXCLUDE_PATTERNS lgpl-3.0.md)
+  set(DOXYGEN_EXCLUDE_PATTERNS lgpl-3.0.md */cmake/* */ext/*)
   doxygen_add_docs(doxygen ${PROJECT_SOURCE_DIR}/ COMMENT "Generate documentation.")
 endif()
