--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -53,6 +53,6 @@ if(DOXYGEN_FOUND)
   set(DOXYGEN_CALL_GRAPH YES)
   set(DOXYGEN_CALLER_GRAPH YES)
   set(DOXYGEN_GRAPHICAL_HIERARCHY NO)
-  set(DOXYGEN_EXCLUDE_PATTERNS lgpl-3.0.md */cmake/* */ext/*)
-  doxygen_add_docs(doxygen ${PROJECT_SOURCE_DIR}/ COMMENT "Generate documentation.")
+  set(DOXYGEN_EXCLUDE_PATTERNS lgpl-3.0.md */cmake/* */ext/* */build/*)
+  doxygen_add_docs(doxygen README.md ${PROJECT_SOURCE_DIR}/src COMMENT "Generate documentation.")
 endif()
