--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,5 @@
-add_executable(hd hd.cpp hdCommon.cpp hdScene.cpp hdShared.cpp hdSplashScene.cpp hdApp.cpp hdEvents.cpp)
-target_link_libraries(hd SDL2::Main SDL2::Image SDL2::TTF SDL2::Net SDL2::Mixer SDL2::GFX)
+list(APPEND LIBHD_COMPONENTS hdCommon.cpp hdScene.cpp hdShared.cpp hdSplashScene.cpp hdApp.cpp hdEvents.cpp)
+#add_executable(hddemo hd.cpp ${LIBHD_COMPONENTS})
+add_library(hd ${LIBHD_COMPONENTS} )
+#target_link_libraries(hddemo SDL2::Main SDL2::Image SDL2::TTF SDL2::Net SDL2::Mixer SDL2::GFX)
+target_link_libraries(hd SDL2::Core SDL2::Image SDL2::TTF SDL2::Net SDL2::Mixer SDL2::GFX)
