--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,22 @@ cmake_minimum_required(VERSION 3.18)
 project(hd)
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/sdl2)
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-include_directories("ext/eventpp/include")
+include_directories("ext/eventpp/include" ${CMAKE_CURRENT_SOURCE_DIR}/src)
+
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip
+)
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
+enable_testing()
+
 find_package(SDL2 REQUIRED)
 find_package(SDL2_image REQUIRED)
 find_package(SDL2_gfx REQUIRED)
@@ -14,5 +26,7 @@ find_package(SDL2_mixer REQUIRED)
 find_package(SDL2_net REQUIRED)
 find_package(Doxygen)
 add_subdirectory(src)
+add_subdirectory(bin)
 add_subdirectory(docs)
 add_subdirectory(patterns)
+add_subdirectory(test)
