CPack; organized things differently.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.18)
-project(hd)
+project(hd VERSION 0.1.0.0 DESCRIPTION "maybe a game, maybe a library.. who knows." HOMEPAGE_URL "https://github.com/BadQuanta/hd" LANGUAGES CXX)
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/sdl2)
 set(CMAKE_CXX_STANDARD 17)
 #set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-include_directories("ext/eventpp/include" ${CMAKE_CURRENT_SOURCE_DIR}/src)
+#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+
 
 include(FetchContent)
 FetchContent_Declare(
@@ -25,8 +25,23 @@ find_package(SDL2_ttf REQUIRED)
 find_package(SDL2_mixer REQUIRED)
 find_package(SDL2_net REQUIRED)
 find_package(Doxygen)
-add_subdirectory(src)
+add_subdirectory(include/hd)
+add_subdirectory(src/hd)
 add_subdirectory(bin)
 add_subdirectory(docs)
 add_subdirectory(patterns)
 add_subdirectory(test)
+set(CPACK_PACKAGE_CONTACT "badquanta@gmail.com")
+set(CPACK_DEBIAN_PACKAGE_DEPENDS libsdl2-2.0-0 libsdl2-gfx-1.0-0 libsdl2-image-2.0-0 libsdl2-mixer-2.0-0 libsdl2-net-2.0-0;libsdl2-ttf-2.0-0)
+set(CPACK_DEBIAN_DEBUGINFO_PACKAGE ON)
+set(CPACK_DEBIAN_PACKAGE_LICENSE "gpl-3.0")
+set(CPACK_GENERATOR DEB RPM TGZ ZIP)
+set(CPACK_RESOURCE_FILE_LICENSE ${PROJECT_SOURCE_DIR}/lgpl-3.0.md)
+set(CPACK_SOURCE_GENERATOR DEB RPM TGZ ZIP)
+list(APPEND CPACK_SOURCE_IGNORE_FILES .*/build/.*)
+include(GNUInstallDirs)
+install(TARGETS hd LIBRARY DESTINATION lib )
+install(TARGETS hddemo RUNTIME DESTINATION bin )
+install(DIRECTORY ${PROJECT_SOURCE_DIR}/include/ ${PROJECT_BINARY_DIR}/include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+        FILES_MATCHING PATTERN "*.hpp")
+include(CPack)
