--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -54,5 +54,5 @@ if(DOXYGEN_FOUND)
   set(DOXYGEN_CALLER_GRAPH YES)
   set(DOXYGEN_GRAPHICAL_HIERARCHY NO)
   set(DOXYGEN_EXCLUDE_PATTERNS lgpl-3.0.md */cmake/* */ext/* */build/*)
-  doxygen_add_docs(doxygen README.md ${PROJECT_SOURCE_DIR}/src COMMENT "Generate documentation.")
+  doxygen_add_docs(doxygen README.md ${PROJECT_SOURCE_DIR}/src ${PROJECT_SOURCE_DIR}/include COMMENT "Generate documentation.")
 endif()
