Got MockFunction finally.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 add_executable(keycode keycode.cpp)
-target_link_libraries(keycode hd gtest_main)
+target_link_libraries(keycode hd gtest_main gmock_main)
 add_test(keycode keycode)
 #include(GoogleTest)
 #gtest_discover_tests(keycode)
