--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ add_subdirectory(include/hd)
 add_subdirectory(src/hd)
 add_subdirectory(bin)
 add_subdirectory(docs)
-add_subdirectory(patterns)
+add_subdirectory(assets)
 add_subdirectory(test)
 set(CPACK_PACKAGE_CONTACT "badquanta@gmail.com")
 set(CPACK_DEBIAN_PACKAGE_DEPENDS libsdl2-2.0-0 libsdl2-gfx-1.0-0 libsdl2-image-2.0-0 libsdl2-mixer-2.0-0 libsdl2-net-2.0-0;libsdl2-ttf-2.0-0)
