Removed SDL_Renderer for OpenGL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,9 @@ find_package(SDL2_gfx REQUIRED)
 find_package(SDL2_ttf REQUIRED)
 find_package(SDL2_mixer REQUIRED)
 find_package(SDL2_net REQUIRED)
+set(OpenGL_GL_PREFERENCE, GLVND)
+find_package(OpenGL REQUIRED)
+find_package(GLEW REQUIRED)
 find_package(Doxygen)
 add_subdirectory(include/hd)
 add_subdirectory(src/hd)
