--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,11 @@ set(CMAKE_CXX_STANDARD 17)
 #set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 #set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 #set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-
+if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
+  set(HD_DEBUG_BUILD 1)
+else()
+  set(HD_DEBUG_BUILD 0)
+endif()
 
 include(FetchContent)
 FetchContent_Declare(
