--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,13 @@ cmake_minimum_required(VERSION 3.18)
 project(hd VERSION 0.1.0.0 DESCRIPTION "maybe a game, maybe a library.. who knows." HOMEPAGE_URL "https://github.com/BadQuanta/hd" LANGUAGES CXX)
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/sdl2)
 set(CMAKE_CXX_STANDARD 17)
+option(HD_DEBUG_EVENT "Enable event println debugging." ON)
+option(HD_PRECOMPILE_HPP "Enable precompiling of some hpp files" ON)
+if(HD_DEBUG_EVENT)
+set(HD_DEBUG_EVENT_VALUE "true")
+else()
+set(HD_DEBUG_EVENT_VALUE "false")
+endif()
 #set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 #set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 #set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
@@ -11,14 +18,6 @@ else()
   set(HD_DEBUG_BUILD 0)
 endif()
 
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip
-)
-# For Windows: Prevent overriding the parent project's compiler/linker settings
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
 
 enable_testing()
 
@@ -31,13 +30,18 @@ find_package(SDL2_net REQUIRED)
 set(OpenGL_GL_PREFERENCE, GLVND)
 find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
-find_package(Doxygen)
 add_subdirectory(include/hd)
 add_subdirectory(src/hd)
-add_subdirectory(bin)
+option(HD_BUILD_BIN "Build binary demos / utilities" ON)
+if(HD_BUILD_BIN)
+  add_subdirectory(bin)
+endif()
 add_subdirectory(docs)
 add_subdirectory(assets)
+option(HD_BUILD_TESTS "Build tests" OFF)
+if(HD_BUILD_TESTS)
 add_subdirectory(test)
+endif()
 set(CPACK_PACKAGE_CONTACT "badquanta@gmail.com")
 set(CPACK_DEBIAN_PACKAGE_DEPENDS libsdl2-2.0-0 libsdl2-gfx-1.0-0 libsdl2-image-2.0-0 libsdl2-mixer-2.0-0 libsdl2-net-2.0-0;libsdl2-ttf-2.0-0)
 set(CPACK_DEBIAN_DEBUGINFO_PACKAGE ON)
@@ -48,7 +52,7 @@ set(CPACK_SOURCE_GENERATOR DEB RPM TGZ ZIP)
 list(APPEND CPACK_SOURCE_IGNORE_FILES .*/build/.*)
 include(GNUInstallDirs)
 install(TARGETS hd LIBRARY DESTINATION lib )
-install(TARGETS hddemo RUNTIME DESTINATION bin )
+
 install(DIRECTORY ${PROJECT_SOURCE_DIR}/include/ ${PROJECT_BINARY_DIR}/include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
         FILES_MATCHING PATTERN "*.hpp")
 include(CPack)
