--- a/include/hd/Config.hpp.in
+++ b/include/hd/Config.hpp.in
@@ -1,5 +1,10 @@
 #pragma once
-
+/**
+ * @brief
+ *
+ * @file
+ *
+ */
 #define PROJECT_NAME "@PROJECT_NAME@"
 #define PROJECT_VERSION "@PROJECT_VERSION@"
 #define PROJECT_VERSION_MAJOR @PROJECT_VERSION_MAJOR@
@@ -10,4 +15,7 @@
 #define HD_SOURCE_ASSETS "@CMAKE_SOURCE_DIR@/assets"
 #define CMAKE_BINARY_DIR "@CMAKE_BINARY_DIR@"
 #define CMAKE_BUILD_TYPE "@CMAKE_BUILD_TYPE@"
-#define HD_DEBUG_BUILD @HD_DEBUG_BUILD@
+#cmakedefine HD_DEBUG_BUILD @HD_DEBUG_BUILD@
+#define HD_DEBUG_EVENT @HD_DEBUG_EVENT_VALUE@
+#cmakedefine HD_LOG_OUTPUT @HD_LOG_OUTPUT@
+#cmakedefine HD_DEBUG_OUTPUT @HD_DEBUG_OUTPUT@
