Header include cleanups.

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -48,7 +48,7 @@ if(DOXYGEN_FOUND)
   set(DOXYGEN_CLASS_GRAPH YES)
   set(DOXYGEN_COLLABORATION_GRAPH YES)
   set(DOXYGEN_GROUP_GRAPHS YES)
-  set(DOXYGEN_TEMPLATE_RELATIONS YES)
+  set(DOXYGEN_TEMPLATE_RELATIONS NO)
   set(DOXYGEN_INCLUDE_GRAPH YES)
   set(DOXYGEN_INCLUDE_BY_GRAPH YES)
   set(DOXYGEN_CALL_GRAPH YES)
