Added "Once" handlers.

--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -1,5 +1,9 @@
-add_executable(hddemo hd.cpp)
-target_link_libraries(hddemo hd)
-add_executable(hd1 hd1.cpp)
-target_link_libraries(hd1 hd)
-install(TARGETS hddemo RUNTIME DESTINATION bin )
+function(hd_exec name)
+  add_executable(${name} ${name}.cpp)
+  target_link_libraries(${name} hd)
+endfunction()
+hd_exec(hddemo)
+hd_exec(hd1)
+hd_exec(hd2)
+
+#install(TARGETS hddemo RUNTIME DESTINATION bin )
