--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(hd VERSION 0.1.0.0 DESCRIPTION "maybe a game, maybe a library.. who know
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/sdl2)
 set(CMAKE_CXX_STANDARD 17)
 option(HD_DEBUG_EVENT "Enable event println debugging." ON)
-option(HD_PRECOMPILE_HPP "Enable precompiling of some hpp files" ON)
+option(HD_COMPILE_COMMON_HPP "Enable precompiling of some hpp files" ON)
 if(HD_DEBUG_EVENT)
 set(HD_DEBUG_EVENT_VALUE "true")
 else()
