--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,8 @@ find_package(SDL2_net REQUIRED)
 set(OpenGL_GL_PREFERENCE, GLVND)
 find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
+find_package(Boost 1.74 REQUIRED COMPONENTS program_options)
+#             date_time filesystem iostreams)
 add_subdirectory(include/hd)
 add_subdirectory(src/hd)
 option(HD_BUILD_BIN "Build binary demos / utilities" ON)
