--- a/src/hd/CMakeLists.txt
+++ b/src/hd/CMakeLists.txt
@@ -1,5 +1,12 @@
 list(APPEND LIBHD_COMPONENTS
   Common.cpp
+  Window.cpp
+  Scene.cpp
+  Shared.cpp
+  SplashScene.cpp
+  Engine.cpp
+  EngineComponent.cpp
+  sdl/Joystick.cpp
   evt/AbstractDispatch.cpp
   evt/ControllerDeviceDispatch.cpp
   evt/ControllerDispatch.cpp
@@ -17,11 +24,7 @@ list(APPEND LIBHD_COMPONENTS
   evt/VoidDispatch.cpp
   evt/WindowDispatch.cpp
   evt/WindowIdDispatch.cpp
-  Window.cpp
-  Scene.cpp
-  Shared.cpp
-  SplashScene.cpp
-  Engine.cpp
+
   gl/Camera.cpp
   gl/Texture.cpp
   gl/ShaderProgram.cpp
@@ -29,12 +32,12 @@ list(APPEND LIBHD_COMPONENTS
   gl/VAO.cpp
   gl/VBO.cpp
   gl/EBO.cpp
-  joy/Device.cpp
+
 )
 #add_executable(hddemo hd.cpp ${LIBHD_COMPONENTS})
 add_library(hd ${LIBHD_COMPONENTS} )
 #target_link_libraries(hddemo SDL2::Main SDL2::Image SDL2::TTF SDL2::Net SDL2::Mixer SDL2::GFX)
-target_link_libraries(hd SDL2::Core SDL2::Image SDL2::TTF SDL2::Net SDL2::Mixer SDL2::GFX OpenGL::GLU OpenGL::OpenGL OpenGL::EGL GLEW::GLEW)
+target_link_libraries(hd Boost::program_options SDL2::Core SDL2::Image SDL2::TTF SDL2::Net SDL2::Mixer SDL2::GFX OpenGL::GLU OpenGL::OpenGL OpenGL::EGL GLEW::GLEW)
 target_include_directories(hd
   PUBLIC
   "${PROJECT_BINARY_DIR}/include/"
