--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -6,5 +6,9 @@ hd_exec(hddemo)
 hd_exec(hd1)
 hd_exec(hd2)
 hd_exec(hd3)
+hd_exec(hd4)
+hd_exec(hd5)
+hd_exec(hd6)
 hd_exec(joy-list)
+hd_exec(playAudio)
 #install(TARGETS hddemo RUNTIME DESTINATION bin )
