--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -1,14 +1,25 @@
 find_package(Doxygen REQUIRED)
 if(DOXYGEN_FOUND)
-  set(DOXYGEN_JAVADOC_AUTOBRIEF YES)
-  set(DOXYGEN_JAVADOC_BANNER NO)
-  set(DOXYGEN_GENERATE_HTML YES)
-  set(DOXYGEN_GENERATE_MAN YES)
+  # all settings
+
+  ## a
+
+  ## b
   set(DOXYGEN_BUILTIN_STL_SUPPORT YES)
+
+  ## c
+  set(DOXYGEN_CALL_GRAPH YES)
+  set(DOXYGEN_CALLER_GRAPH YES)
+  set(DOXYGEN_CASE_SENSE_NAMES YES)
+  set(DOXYGEN_CLASS_GRAPH YES)
+  set(DOXYGEN_COLLABORATION_GRAPH YES)
+
+  ## d
   set(DOXYGEN_DISTRIBUTE_GROUP_DOC YES)
-  set(DOXYGEN_GROUP_NESTED_COMPOUNDS YES)
-  set(DOXYGEN_SUBGROUPING YES)
-  set(DOXYGEN_INLINE_GROUPED_CLASSES NO)
+  set(DOXYGEN_DOT_IMAGE_FORMAT svg)
+
+  ## e
+  set(DOXYGEN_EXCLUDE_PATTERNS lgpl-3.0.md */cmake/* */ext/* */build/*)
   set(DOXYGEN_EXTRACT_ALL YES)
   set(DOXYGEN_EXTRACT_PRIVATE YES)
   set(DOXYGEN_EXTRACT_PRIV_VIRTUAL YES)
@@ -16,47 +27,97 @@ if(DOXYGEN_FOUND)
   set(DOXYGEN_EXTRACT_STATIC YES)
   set(DOXYGEN_EXTRACT_ANON_NSPACES YES)
   set(DOXYGEN_EXTRACT_UNNAMED_PARAMS YES)
+
+  ## f
+  set(DOXYGEN_FULL_SIDEBAR YES)
+
+  ## g
+  set(DOXYGEN_GENERATE_HTML YES)
+  set(DOXYGEN_GENERATE_MAN NO)
+  set(DOXYGEN_GENERATE_TODOLIST YES)
+  set(DOXYGEN_GENERATE_TESTLIST YES)
+  set(DOXYGEN_GENERATE_BUGLIST YES)
+  set(DOXYGEN_GENERATE_DEPRECATEDLIST YES)
+  set(DOXYGEN_GENERATE_TREEVIEW YES)
+  set(DOXYGEN_GRAPHICAL_HIERARCHY NO)
+  set(DOXYGEN_GROUP_NESTED_COMPOUNDS YES)
+  set(DOXYGEN_GROUP_GRAPHS YES)
+  set(DOXYGEN_GROUPED_MEMB_INC YES)
+
+  ## h
+  set(DOXYGEN_HTML_TIMESTAMP YES)
+
+  ## i
+  set(DOXYGEN_INLINE_GROUPED_CLASSES YES)
   set(DOXYGEN_INTERNAL_DOCS YES)
-  set(DOXYGEN_CASE_SENSE_NAMES YES)
+  set(DOXYGEN_IMAGE_PATH ${PROJECT_SOURCE_DIR})
+  set(DOXYGEN_INLINE_SOURCES YES)
+  set(DOXYGEN_INCLUDE_GRAPH YES)
+  set(DOXYGEN_INCLUDE_BY_GRAPH YES)
+  set(DOXYGEN_INTERACTIVE_SVG yes)
+
+  ## j
+  set(DOXYGEN_JAVADOC_AUTOBRIEF YES)
+  set(DOXYGEN_JAVADOC_BANNER NO)
+
+  #k
+
+  #l
+  set(DOXYGEN_REFERENCES_LINK_SOURCE YES)
+
+  #m
+
+  #n
+
+  #o
+
+  #p
+
+  #q
+
+  #r
+  set(DOXYGEN_RECURSIVE YES)
+  set(DOXYGEN_REFERENCED_BY_RELATION YES)
+  set(DOXYGEN_REFERENCES_RELATION YES)
+
+  #s
+  set(DOXYGEN_SUBGROUPING YES)
   set(DOXYGEN_SHOW_HEADERFILE YES)
   set(DOXYGEN_SHOW_INCLUDE_FILES YES)
-  set(DOXYGEN_GROUPED_MEMB_INC YES)
   set(DOXYGEN_SORT_MEMBER_DOCS YES)
   set(DOXYGEN_SORT_BRIEF_DOCS YES)
   set(DOXYGEN_SORT_MEMBERS_CTORS_1ST YES)
   set(DOXYGEN_SORT_GROUP_NAMES YES)
   set(DOXYGEN_SORT_BY_SCOPE_NAME YES)
-  set(DOXYGEN_GENERATE_TODOLIST YES)
-  set(DOXYGEN_GENERATE_TESTLIST YES)
-  set(DOXYGEN_GENERATE_BUGLIST YES)
-  set(DOXYGEN_GENERATE_DEPRECATEDLIST YES)
+  set(DOXYGEN_SOURCE_BROWSER YES)
+  set(DOXYGEN_STRIP_CODE_COMMENTS NO)
+
+  #t
+
+  #u
+  set(DOXYGEN_USE_MDFILE_AS_MAINPAGE README.md)
+
+  #v
+
+  #w
   set(DOXYGEN_WARNINGS YES)
   set(DOXYGEN_WARN_IF_UNDOCUMENTED YES)
   set(DOXYGEN_WARN_NO_PARAMDOC YES)
-  set(DOXYGEN_RECURSIVE YES)
-  set(DOXYGEN_IMAGE_PATH ${PROJECT_SOURCE_DIR})
-  set(DOXYGEN_USE_MDFILE_AS_MAINPAGE README.md)
-  set(DOXYGEN_SOURCE_BROWSER YES)
-  set(DOXYGEN_INLINE_SOURCES YES)
-  set(DOXYGEN_STRIP_CODE_COMMENTS NO)
-  set(DOXYGEN_REFERENCED_BY_RELATION YES)
-  set(DOXYGEN_REFERENCES_RELATION YES)
-  set(DOXYGEN_REFERENCES_LINK_SOURCE YES)
-  set(DOXYGEN_HTML_TIMESTAMP YES)
-  set(DOXYGEN_GENERATE_TREEVIEW YES)
-  set(DOXYGEN_FULL_SIDEBAR YES)
-  set(DOXYGEN_CLASS_GRAPH YES)
-  set(DOXYGEN_COLLABORATION_GRAPH YES)
-  set(DOXYGEN_GROUP_GRAPHS YES)
+
+  #x
+
+  #y
+
+  #z
+
+
+
+
+
+
+
   set(DOXYGEN_TEMPLATE_RELATIONS NO)
-  set(DOXYGEN_INCLUDE_GRAPH YES)
-  set(DOXYGEN_INCLUDE_BY_GRAPH YES)
-  set(DOXYGEN_CALL_GRAPH YES)
-  set(DOXYGEN_CALLER_GRAPH YES)
-  set(DOXYGEN_GRAPHICAL_HIERARCHY NO)
-  set(DOXYGEN_EXCLUDE_PATTERNS lgpl-3.0.md */cmake/* */ext/* */build/*)
-  doxygen_add_docs(doxygen
-    ${PROJECT_SOURCE_DIR}/README.md
-    ${PROJECT_SOURCE_DIR}/src ${PROJECT_SOURCE_DIR}/include
-    COMMENT "Generate documentation.")
+  doxygen_add_docs(
+    doxygen ${PROJECT_SOURCE_DIR}/README.md ${PROJECT_SOURCE_DIR}/src
+    ${PROJECT_SOURCE_DIR}/include COMMENT "Generate documentation.")
 endif()
