--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/sdl2)
 set(CMAKE_CXX_STANDARD 17)
 option(HD_DEBUG_EVENT "Enable event println debugging." ON)
 option(HD_COMPILE_COMMON_HPP "Enable precompiling of some hpp files" ON)
+
 if(HD_DEBUG_EVENT)
 set(HD_DEBUG_EVENT_VALUE "true")
 else()
@@ -34,12 +35,23 @@ find_package(Boost 1.74 REQUIRED COMPONENTS program_options)
 #             date_time filesystem iostreams)
 add_subdirectory(include/hd)
 add_subdirectory(src/hd)
+
+function(hd_exec name)
+  add_executable(${name} ${name}.cpp)
+  target_link_libraries(${name} hd)
+endfunction()
+add_subdirectory(assets)
 option(HD_BUILD_BIN "Build binary demos / utilities" ON)
 if(HD_BUILD_BIN)
   add_subdirectory(bin)
 endif()
+
+option(HD_BUILD_EXAMPLES "Build hd examples" OFF)
+if(HD_BUILD_EXAMPLES)
+  add_subdirectory(examples)
+endif()
 add_subdirectory(docs)
-add_subdirectory(assets)
+
 option(HD_BUILD_TESTS "Build tests" OFF)
 if(HD_BUILD_TESTS)
 add_subdirectory(test)
