Moving to black laptop.

--- a/src/hd/CMakeLists.txt
+++ b/src/hd/CMakeLists.txt
@@ -10,6 +10,7 @@ list(APPEND LIBHD_COMPONENTS
   sdl/GameController.cpp
   sdl/MixerChunk.cpp
   sdl/MixerChannel.cpp
+  sdl/Surface.cpp
 
   evt/AbstractDispatch.cpp
   evt/ControllerDeviceDispatch.cpp
