--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ assets/kgi/Black/2x/*
 assets/kgi/Kenney_gameIcons/*
 assets/kgi/White/2x/*
 assets/kgi/preview.png
+assets/audio/JRPG\ Music\ Pack\ #1\ \[Exploration\]\ by\ Juhani\ Junkala*
