--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,5 +10,12 @@ FetchContent_MakeAvailable(googletest)
 add_executable(keycode keycode.cpp)
 target_link_libraries(keycode hd gtest_main gmock_main)
 add_test(keycode keycode)
+function(hd_test NAME)
+  add_executable(${NAME} ${NAME}.cpp)
+  target_link_libraries(${NAME} hd gtest_main gmock_main)
+  add_test(${NAME} ${NAME})
+endfunction()
+
+hd_test(wrapTest)
 #include(GoogleTest)
 #gtest_discover_tests(keycode)
