--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -19,6 +19,9 @@ if(DOXYGEN_FOUND)
   set(DOXYGEN_DOT_IMAGE_FORMAT svg)
 
   ## e
+  set(DOXYGEN_EXAMPLE_PATH ${PROJECT_SOURCE_DIR}/examples/)
+  set(DOXYGEN_EXAMPLE_PATTERNS *.cpp)
+  set(DOXYGEN_EXAMPLE_RECURSIVE NO)
   set(DOXYGEN_EXCLUDE_PATTERNS lgpl-3.0.md */cmake/* */ext/* */build/*)
   set(DOXYGEN_EXTRACT_ALL YES)
   set(DOXYGEN_EXTRACT_PRIVATE YES)
