Doxygen Example path now includes test and bin as well as examples.

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -19,7 +19,7 @@ if(DOXYGEN_FOUND)
   set(DOXYGEN_DOT_IMAGE_FORMAT svg)
 
   ## e
-  set(DOXYGEN_EXAMPLE_PATH ${PROJECT_SOURCE_DIR}/examples/)
+  set(DOXYGEN_EXAMPLE_PATH ${PROJECT_SOURCE_DIR}/examples/;${PROJECT_SOURCE_DIR}/test/;${PROJECT_SOURCE_DIR}/bin/)
   set(DOXYGEN_EXAMPLE_PATTERNS *.cpp)
   set(DOXYGEN_EXAMPLE_RECURSIVE NO)
   set(DOXYGEN_EXCLUDE_PATTERNS lgpl-3.0.md */cmake/* */ext/* */build/*)
