--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -1,127 +1,160 @@
 find_package(Doxygen REQUIRED)
 if(DOXYGEN_FOUND)
-  # all settings
-
-  ## a
-
-  ## b
+  # ############################################################################
+  # Constant DOXYGEN SETTINGS
+  # ############################################################################
+  # a b
   set(DOXYGEN_BUILTIN_STL_SUPPORT YES)
-
-  ## c
-  set(DOXYGEN_CALL_GRAPH YES)
-  set(DOXYGEN_CALLER_GRAPH YES)
+  # c
   set(DOXYGEN_CASE_SENSE_NAMES YES)
-  set(DOXYGEN_CLASS_GRAPH YES)
-  set(DOXYGEN_COLLABORATION_GRAPH YES)
-
-  ## d
+  # d
   set(DOXYGEN_DISTRIBUTE_GROUP_DOC YES)
-  set(DOXYGEN_DOT_IMAGE_FORMAT svg)
-
-  ## e
-  set(DOXYGEN_EXAMPLE_PATH ${PROJECT_SOURCE_DIR}/examples/;${PROJECT_SOURCE_DIR}/test/;${PROJECT_SOURCE_DIR}/bin/)
+  # e
+  set(DOXYGEN_EXAMPLE_PATH
+      ${PROJECT_SOURCE_DIR}/examples/;${PROJECT_SOURCE_DIR}/test/;${PROJECT_SOURCE_DIR}/bin/
+  )
   set(DOXYGEN_EXAMPLE_PATTERNS *.cpp)
   set(DOXYGEN_EXAMPLE_RECURSIVE NO)
   set(DOXYGEN_EXCLUDE_PATTERNS lgpl-3.0.md */cmake/* */ext/* */build/*)
-  set(DOXYGEN_EXTRACT_ALL YES)
-  set(DOXYGEN_EXTRACT_PRIVATE YES)
-  set(DOXYGEN_EXTRACT_PRIV_VIRTUAL YES)
-  set(DOXYGEN_EXTRACT_PACKAGE YES)
-  set(DOXYGEN_EXTRACT_STATIC YES)
-  set(DOXYGEN_EXTRACT_ANON_NSPACES YES)
-  set(DOXYGEN_EXTRACT_UNNAMED_PARAMS YES)
-
-  ## f
-  set(DOXYGEN_FULL_SIDEBAR YES)
-
-  ## g
-  set(DOXYGEN_GENERATE_HTML YES)
-  set(DOXYGEN_GENERATE_MAN NO)
-  set(DOXYGEN_GENERATE_TODOLIST YES)
-  set(DOXYGEN_GENERATE_TESTLIST YES)
-  set(DOXYGEN_GENERATE_BUGLIST YES)
-  set(DOXYGEN_GENERATE_DEPRECATEDLIST YES)
-  set(DOXYGEN_GENERATE_TREEVIEW YES)
-  set(DOXYGEN_GRAPHICAL_HIERARCHY NO)
+  # f g
   set(DOXYGEN_GROUP_NESTED_COMPOUNDS YES)
   set(DOXYGEN_GROUP_GRAPHS YES)
   set(DOXYGEN_GROUPED_MEMB_INC YES)
-
-  ## h
+  # h
   set(DOXYGEN_HTML_TIMESTAMP YES)
-
-  ## i
-  set(DOXYGEN_INLINE_GROUPED_CLASSES YES)
-  set(DOXYGEN_INTERNAL_DOCS YES)
+  # i
   set(DOXYGEN_IMAGE_PATH ${PROJECT_SOURCE_DIR})
-  set(DOXYGEN_INLINE_SOURCES YES)
-  set(DOXYGEN_INCLUDE_GRAPH YES)
-  set(DOXYGEN_INCLUDE_BY_GRAPH YES)
-  set(DOXYGEN_INTERACTIVE_SVG yes)
-
-  ## j
+  # j
   set(DOXYGEN_JAVADOC_AUTOBRIEF YES)
-  set(DOXYGEN_JAVADOC_BANNER NO)
-
-  #k
-
-  #l
-  set(DOXYGEN_REFERENCES_LINK_SOURCE YES)
-
-  #m
-
-  #n
-
-  #o
-
-  #p
-
-  #q
-
-  #r
+  set(DOXYGEN_JAVADOC_BANNER YES)
+  # k l m n o
+  set(DOXYGEN_OUTPUT_DIRECTORY
+      "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}")
+  # p q r
   set(DOXYGEN_RECURSIVE YES)
-  set(DOXYGEN_REFERENCED_BY_RELATION YES)
-  set(DOXYGEN_REFERENCES_RELATION YES)
-
-  #s
+  # s
   set(DOXYGEN_SUBGROUPING YES)
-  set(DOXYGEN_SHOW_HEADERFILE YES)
-  set(DOXYGEN_SHOW_INCLUDE_FILES YES)
   set(DOXYGEN_SORT_MEMBER_DOCS YES)
   set(DOXYGEN_SORT_BRIEF_DOCS YES)
   set(DOXYGEN_SORT_MEMBERS_CTORS_1ST YES)
   set(DOXYGEN_SORT_GROUP_NAMES YES)
   set(DOXYGEN_SORT_BY_SCOPE_NAME YES)
-  set(DOXYGEN_SOURCE_BROWSER YES)
-  set(DOXYGEN_STRIP_CODE_COMMENTS NO)
-
-  #t
-  set(DOXYGEN_TEMPLATE_RELATIONS YES)
-
-  #u
+  # t u
   set(DOXYGEN_USE_MDFILE_AS_MAINPAGE README.md)
-
-  #v
-
-  #w
+  # v w
   set(DOXYGEN_WARNINGS YES)
   set(DOXYGEN_WARN_IF_UNDOCUMENTED YES)
-  set(DOXYGEN_WARN_NO_PARAMDOC YES)
+  set(DOXYGEN_WARN_NO_PARAMDOC NO)
+  set(DOXYGEN_WARN_IF_INCOMPLETE_DOC NO)
+  set(DOXYGEN_WARN_IF_DOC_ERROR NO)
+  # x y z
+  # ############################################################################
+  # Variant DOXYGEN SETTINGS
+  # ############################################################################
+  if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    # a b c
+    set(DOXYGEN_CALL_GRAPH YES )
+    set(DOXYGEN_CALLER_GRAPH YES )
+    set(DOXYGEN_CLASS_GRAPH YES )
+    set(DOXYGEN_COLLABORATION_GRAPH YES )
+    # d
+    set(DOXYGEN_DIRECTORY_GRAPH YES )
+    set(DOXYGEN_DOT_IMAGE_FORMAT svg )
 
-  #x
-
-  #y
-
-  #z
-
-
-
-
-
-
-
+    # e
+    set(DOXYGEN_EXTRACT_ALL YES )
+    set(DOXYGEN_EXTRACT_PRIVATE YES )
+    set(DOXYGEN_EXTRACT_PRIV_VIRTUAL YES )
+    set(DOXYGEN_EXTRACT_PACKAGE YES )
+    set(DOXYGEN_EXTRACT_STATIC YES )
+    set(DOXYGEN_EXTRACT_ANON_NSPACES YES )
+    set(DOXYGEN_EXTRACT_UNNAMED_PARAMS YES )
+    # f
+    set(DOXYGEN_FULL_SIDEBAR YES )
+    # g
+    set(DOXYGEN_GENERATE_HTML YES )
+    set(DOXYGEN_GENERATE_MAN NO )
+    set(DOXYGEN_GENERATE_TODOLIST YES )
+    set(DOXYGEN_GENERATE_TESTLIST YES )
+    set(DOXYGEN_GENERATE_TREEVIEW YES )
+    set(DOXYGEN_GENERATE_BUGLIST YES )
+    set(DOXYGEN_GENERATE_DEPRECATEDLIST YES )
+    set(DOXYGEN_GENERATE_TREEVIEW NO )
+    set(DOXYGEN_GRAPHICAL_HIERARCHY YES )
+    # h
+    set(DOXYGEN_HTML_DYNAMIC_SECTIONS YES )
+    # i
+    set(DOXYGEN_INLINE_GROUPED_CLASSES YES )
+    set(DOXYGEN_INTERNAL_DOCS YES )
+    set(DOXYGEN_INLINE_SOURCES YES )
+    set(DOXYGEN_INCLUDE_GRAPH YES )
+    set(DOXYGEN_INCLUDE_BY_GRAPH YES )
+    set(DOXYGEN_INTERACTIVE_SVG YES )
+    # j k l m n o p q
+    set(DOXYGEN_QUIET NO )
+    # r
+    set(DOXYGEN_REFERENCES_LINK_SOURCE YES )
+    set(DOXYGEN_REFERENCED_BY_RELATION YES )
+    set(DOXYGEN_REFERENCES_RELATION YES )
+    # s
+    set(DOXYGEN_SHOW_HEADERFILE YES )
+    set(DOXYGEN_SHOW_INCLUDE_FILES YES )
+    set(DOXYGEN_SOURCE_BROWSER YES )
+    set(DOXYGEN_STRIP_CODE_COMMENTS NO )
+    # t
+    set(DOXYGEN_TEMPLATE_RELATIONS YES )
+    # u v
+    set(DOXYGEN_VERBATIM_HEADERS YES)
+    # w
+    set(DOXYGEN_WARN_AS_ERROR NO )
+    # x y z
+  else()
+    set(DOXYGEN_CALL_GRAPH NO )
+    set(DOXYGEN_CALLER_GRAPH NO )
+    set(DOXYGEN_CLASS_GRAPH NO )
+    set(DOXYGEN_COLLABORATION_GRAPH NO )
+    set(DOXYGEN_DIRECTORY_GRAPH NO )
+    set(DOXYGEN_DOT_IMAGE_FORMAT png )
+    set(DOXYGEN_HTML_DYNAMIC_SECTIONS NO )
+    set(DOXYGEN_EXTRACT_ALL NO )
+    set(DOXYGEN_EXTRACT_PRIVATE NO )
+    set(DOXYGEN_EXTRACT_PRIV_VIRTUAL NO )
+    set(DOXYGEN_EXTRACT_PACKAGE NO )
+    set(DOXYGEN_EXTRACT_STATIC NO )
+    set(DOXYGEN_EXTRACT_ANON_NSPACES NO )
+    set(DOXYGEN_EXTRACT_UNNAMED_PARAMS NO )
+    set(DOXYGEN_FULL_SIDEBAR NO )
+    set(DOXYGEN_GENERATE_HTML YES )
+    set(DOXYGEN_GENERATE_MAN YES )
+    set(DOXYGEN_GENERATE_TREEVIEW NO )
+    set(DOXYGEN_GENERATE_TODOLIST NO )
+    set(DOXYGEN_GENERATE_TESTLIST NO )
+    set(DOXYGEN_GENERATE_BUGLIST NO )
+    set(DOXYGEN_GENERATE_DEPRECATEDLIST NO )
+    set(DOXYGEN_GENERATE_TREEVIEW NO )
+    set(DOXYGEN_GRAPHICAL_HIERARCHY NO )
+    set(DOXYGEN_INLINE_GROUPED_CLASSES NO )
+    set(DOXYGEN_INTERNAL_DOCS NO )
+    set(DOXYGEN_INLINE_SOURCES NO )
+    set(DOXYGEN_INCLUDE_GRAPH NO )
+    set(DOXYGEN_INCLUDE_BY_GRAPH NO )
+    set(DOXYGEN_INTERACTIVE_SVG NO )
+    set(DOXYGEN_REFERENCES_LINK_SOURCE NO )
+    set(DOXYGEN_REFERENCED_BY_RELATION NO )
+    set(DOXYGEN_REFERENCES_RELATION NO )
+    set(DOXYGEN_SHOW_HEADERFILE NO )
+    set(DOXYGEN_SHOW_INCLUDE_FILES NO )
+    set(DOXYGEN_SOURCE_BROWSER NO )
+    set(DOXYGEN_STRIP_CODE_COMMENTS YES )
+    set(DOXYGEN_TEMPLATE_RELATIONS NO )
+    set(DOXYGEN_VERBATIM_HEADERS NO)
+    set(DOXYGEN_WARN_AS_ERROR YES )
+    set(DOXYGEN_QUIET YES )
+  endif(CMAKE_BUILD_TYPE EQUAL "DEBUG")
 
   doxygen_add_docs(
     doxygen ${PROJECT_SOURCE_DIR}/README.md ${PROJECT_SOURCE_DIR}/src
     ${PROJECT_SOURCE_DIR}/include COMMENT "Generate documentation.")
+  # ############################################################################
+  configure_file(index.html index.html)
 endif()
