UI starting. Font/Surface/Window const funcs. Dispatch now calls handlers AFTER iterating through handler maps.

--- a/src/hd/CMakeLists.txt
+++ b/src/hd/CMakeLists.txt
@@ -4,6 +4,8 @@ list(APPEND LIBHD_COMPONENTS
   Engine.cpp
   EngineComponent.cpp
   Dispatch.cpp
+  Rect.cpp
+  Ui.cpp
 
   sdl/Joystick.cpp
   sdl/GameController.cpp
