starting to enforce my naming convention

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -47,7 +47,7 @@ if(DOXYGEN_FOUND)
   set(DOXYGEN_WARN_NO_PARAMDOC NO)
   set(DOXYGEN_WARN_IF_INCOMPLETE_DOC NO)
   set(DOXYGEN_WARN_IF_DOC_ERROR NO)
-  set(DOXYGEN_QUIET NO )
+  set(DOXYGEN_QUIET YES )
   # x y z
   # ############################################################################
   # Variant DOXYGEN SETTINGS
@@ -71,7 +71,7 @@ if(DOXYGEN_FOUND)
     set(DOXYGEN_EXTRACT_ANON_NSPACES YES )
     set(DOXYGEN_EXTRACT_UNNAMED_PARAMS YES )
     # f
-    set(DOXYGEN_FULL_SIDEBAR YES )
+    set(DOXYGEN_FULL_SIDEBAR NO )
     # g
     set(DOXYGEN_GENERATE_HTML YES )
     set(DOXYGEN_GENERATE_MAN NO )
@@ -87,7 +87,7 @@ if(DOXYGEN_FOUND)
     # i
     set(DOXYGEN_INLINE_GROUPED_CLASSES YES )
     set(DOXYGEN_INTERNAL_DOCS YES )
-    set(DOXYGEN_INLINE_SOURCES YES )
+    set(DOXYGEN_INLINE_SOURCES NO )
     set(DOXYGEN_INCLUDE_GRAPH YES )
     set(DOXYGEN_INCLUDE_BY_GRAPH YES )
     set(DOXYGEN_INTERACTIVE_SVG YES )
@@ -97,14 +97,14 @@ if(DOXYGEN_FOUND)
     set(DOXYGEN_REFERENCED_BY_RELATION YES )
     set(DOXYGEN_REFERENCES_RELATION YES )
     # s
-    set(DOXYGEN_SHOW_HEADERFILE YES )
-    set(DOXYGEN_SHOW_INCLUDE_FILES YES )
-    set(DOXYGEN_SOURCE_BROWSER YES )
+    set(DOXYGEN_SHOW_HEADERFILE NO )
+    set(DOXYGEN_SHOW_INCLUDE_FILES NO )
+    set(DOXYGEN_SOURCE_BROWSER NO )
     set(DOXYGEN_STRIP_CODE_COMMENTS YES )
     # t
-    set(DOXYGEN_TEMPLATE_RELATIONS YES )
+    set(DOXYGEN_TEMPLATE_RELATIONS NO )
     # u v
-    set(DOXYGEN_VERBATIM_HEADERS YES)
+    set(DOXYGEN_VERBATIM_HEADERS NO)
     # w
     set(DOXYGEN_WARN_AS_ERROR NO )
     # x y z
